--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
   "routes": [
     {
       "src": "/restaurantimage(.+)",
       "dest": "public/uploads/restaurants"
-    }
+    },
+    { "src": "/(.*)", "destination": "/api" }
   ]
 }
