--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,1 @@
-{
-  "version": 2,
-  "routes": [
-    {
-      "src": "/restaurantimage(.+)",
-      "dest": "public/uploads/restaurants"
-    },
-    { "src": "/(.*)", "destination": "/api" }
-  ]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
