--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "simple-update-notifier": "^2.0.0",
     "sparse-bitfield": "^3.0.3",
     "statuses": "^2.0.1",
+    "stream": "^0.0.2",
     "supports-color": "^5.5.0",
     "to-regex-range": "^5.0.1",
     "toidentifier": "^1.0.1",
