--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.18.2",
+    "express-busboy": "^10.1.0",
     "express-rate-limit": "^7.1.4",
     "express-validator": "^7.0.1",
     "fill-range": "^7.0.1",
