--- a/.env.examples
+++ b/.env.examples
@@ -1,2 +1,11 @@
-PORT=27017
-MONGODB_URL=mongodb+srv://lebahuybk:***@huycluster.xyijf1x.mongodb.net/
+PORT=4000
+MONGODB_URL=
+CLIENT_ID=
+CLIENT_SECRET=
+REDIRECT_URI=
+REFRESH_TOKEN_GOOGLE_DRIVE=
+RESTAURANT_FOLDER_ID=
+FOOD_FOLDER_ID=
+USER_FOLDER_ID=
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
